<resources>
	<string name="app_name">Blockchain</string>
	<string name="toast_wallet_reset">Wallet was reset,\nwill take some time to recover
	</string>
	<string name="toast_wallet_download_failed">Failed to download wallet from server. Please check
		your internet connection.</string>
	<string name="toast_wallet_decryption_failed">Failed to decrypt wallet. Your password may be
		incorrect.</string>
	<string name="toast_wallet_decrypt_failed">Error decrypting wallet. Please check your
		password.</string>
	<string name="toast_generated_new_wallet">Generated new wallet.</string>
	<string name="toast_downloading_wallet">Downloading wallet.</string>
	<string name="toast_error_downloading_transactions">Error downloading transactions.</string>
	<string name="toast_error_syncing_wallet">Error syncing wallet. Please check your internet
		connection.</string>
	<string name="toast_error_downloading_captcha">Error downloading captcha.</string>
	<string name="error_pairing_wallet">Error pairing wallet.</string>
	<string name="wallet_options_bug">Bug Report</string>
	<string name="wrong_private_key">Private Key does not match bitcoin address. You scanned %s</string>
	<string name="second_password_text">This action requires a second password in order to
		fully decrypt your bitcoin wallet. Please enter your second password
		below.</string>
	<string name="new_account_password_length_error">Password must be between 10 and 255 characters
	</string>
	<string name="new_account_password_mismatch_error">Passwords do not match</string>
	<string name="new_account_kaptcha_error">Captcha code incorrect</string>
	<string name="new_account_no_kaptcha_error">You must enter a captcha code</string>
	<string name="new_account_success">New account successfully created</string>
	<string name="dialog_continue">Continue</string>
	<string name="second_password_title">Second Password</string>
	<string name="second_password_correct">Second Password Correct</string>
	<string name="second_password_incorrect">Second Password Incorrect</string>
	<string name="generate_key_no_password_error">Cannot generate key without a second password
	</string>
	<string name="send_no_password_error">Cannot send transaction without a second password
	</string>
	<string name="ask_for_fee">This transaction is low priority it is recommended you include a 0.005 BTC miners fee. Would you like to add this fee now?</string>
	<string name="ask_for_private_key">This transaction requires the private key for Bitcoin address %s. Would you like to scan it from a paper wallet?</string>
	<string name="error_setting_label">Error setting address label</string>
	<string name="new_account_title">New account</string>
	<string name="password">Password:</string>
	<string name="password_confirm">Confirm Password:</string>
	<string name="captcha">Captcha:</string>
	<string name="captcha_code">Please type the captcha code</string>
	<string name="create_account">Create Account</string>
	<string name="creating_account">Creating new account. Please Wait</string>
	<string name="blockchain_state_disclaimer">Use at your own risk. Read the safety notes.
	</string>
	<string name="blockchain_state_message_hours">Blockchain %1$s, %2$d hours behind</string>
	<string name="blockchain_state_message_days">Blockchain %1$s, %2$d days behind</string>
	<string name="blockchain_state_message_weeks">Blockchain %1$s, %2$d weeks behind</string>
	<string name="blockchain_state_message_downloading">downloading</string>
	<string name="blockchain_state_message_stalled">stalled</string>
	<string name="blockchain_state_message_problem_storage">Blockchain not downloading: Storage problem
	</string>
	<string name="blockchain_state_message_problem_power">Blockchain not downloading: Power problem</string>
	<string name="blockchain_state_message_problem_network">Blockchain not downloading: Network problem
	</string>
	<string name="wallet_address_fragment_your">Your Bitcoin Address:</string>
	<string name="wallet_address_fragment_clipboard_msg">Bitcoin address copied to clipboard</string>
	<string name="wallet_address_fragment_share_dialog_title">Share your bitcoin address…</string>
	<string-array name="wallet_address_fragment_context">
		<item>List all</item>
		<item>Show QR code</item>
		<item>Copy to clipboard</item>
		<item>Share</item>
	</string-array>
	<string name="wallet_addresses_fragment_unlabeled">(unlabeled)</string>
	<string name="wallet_addresses_fragment_add_dialog_title">Add Bitcoin address</string>
	<string name="wallet_addresses_fragment_add_dialog_message">Bitcoin addresses cannot be deleted. Do you want to
		add a new address to your wallet?</string>
	<string name="wallet_addresses_fragment_add_dialog_positive">Add address</string>
	<string name="wallet_balance_fragment_local_value">worth about %1$s %2$s</string>
	<string name="exchange_rates_fragment_empty_text">Could not load exchange rates</string>
	<string name="wallet_transactions_fragment_tab_received">Received</string>
	<string name="wallet_transactions_fragment_tab_all">Both</string>
	<string name="wallet_transactions_fragment_tab_sent">Sent</string>
	<string name="wallet_transactions_fragment_empty_text_received">No Bitcoins received so far</string>
	<string name="wallet_transactions_fragment_empty_text_sent">No Bitcoins sent so far</string>
	<string name="wallet_transactions_context_edit_address_title">Add/edit address</string>
	<string name="wallet_transactions_context_show_transaction_title">Transaction details</string>
	<string name="wallet_options_request_coins">Request coins</string>
	<string name="wallet_options_send_coins">Send coins</string>
	<string name="wallet_options_about">About</string>
	<string name="wallet_options_safety">Safety notes</string>
	<string name="wallet_options_donate">Tip / Donate</string>
	<string name="wallet_options_help">Help</string>
	<string name="wallet_low_storage_dialog_title">Internal Device Storage Space Low!</string>
	<string name="wallet_low_storage_dialog_msg">Bitcoin Wallet uses internal storage for
		remembering transactions and blocks. If it runs out of
		space, it will
		stop working and your Bitcoins are at risk!\n\nDo you want to open the
		Application Manager in order to
		uninstall unneeded apps?
	</string>
	<string name="wallet_low_storage_dialog_button_apps">Manage Apps</string>
	<string name="wallet_timeskew_dialog_title">Check your time settings!</string>
	<string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably
		cannot send or receive Bitcoins due to this
		problem.\n\nYou should
		check and correct your time and timezone settings.
	</string>
	<string name="wallet_timeskew_dialog_button_settings">Settings</string>
	<string name="send_coins_activity_title">Send Bitcoins</string>
	<string name="send_coins_install_qr_scanner_msg">Please install ZXing QR-code scanner or Goggles!
	</string>
	<string name="send_coins_uri_parse_error_title">Invalid Bitcoin URI</string>
	<string name="send_coins_parse_address_error_msg">Got invalid bitcoin address!\n(Mixing up
		Testnet/Prodnet?)</string>
	<string name="send_coins_fragment_receiving_address_label">Pay to</string>
	<string name="send_coins_fragment_receiving_address_hint">type address or name</string>
	<string name="send_coins_fragment_receiving_address_error">Invalid Bitcoin Address!</string>
	<string name="send_coins_fragment_available_label">Available for spending</string>
	<string name="send_coins_fragment_pending">(BTC %s waiting for confirmation)</string>
	<string name="send_coins_fragment_amount_label">Amount to pay</string>
	<string name="send_coins_fragment_fee_label">Fee (optional)</string>
	<string name="send_coins_fragment_button_send">Send</string>
	<string name="send_coins_fragment_button_back">Back</string>
	<string name="send_coins_fragment_need_btc">Need Bitcoins?</string>
	<string name="send_coins_fragment_instant_deposit">Instant Deposit</string>
	<string name="send_coins_sending_msg">Sending…</string>
	<string name="send_coins_sent_msg">Sent!</string>
	<string name="send_coins_add_address_dialog_title">The recipient is not yet contained in your address
		book.\n\nDo you want to add the address?</string>
	<string name="send_coins_add_address_dialog_button_add">Add address</string>
	<string name="send_coins_error_msg">Problem sending coins!</string>
	<string name="send_coins_success_msg">BTC %s sent!</string>
	<string name="request_coins_activity_title">Request Bitcoins</string>
	<string name="request_coins_fragment_amount_label">Requested amount (optional)</string>
	<string name="request_coins_fragment_qr_label">Have this QR-code scanned by the sender:</string>
	<string name="request_coins_fragment_nfc_enabled">Or touch with NFC enabled device.</string>
	<string name="request_coins_clipboard_msg">Bitcoin request copied to clipboard</string>
	<string name="request_coins_share_dialog_title">Share request for Bitcoins…</string>
	<string name="address_book_activity_title">Address Book</string>
	<string name="address_book_list_receiving_title">Active addresses</string>
	<string name="address_book_list_archived_title">Archived addresses</string>
	<string name="address_book_list_sending_title">Sending addresses</string>
	<string name="address_book_empty_text">No entries in address book</string>
	<string name="address_book_context_send_title">Send Bitcoins to address</string>
	<string name="address_book_context_edit_title">Edit address</string>
	<string name="address_book_context_remove_title">Remove address</string>
	<string name="address_book_context_show_qr_title">Show QR code</string>
	<string name="address_book_context_copy_to_clipboard_title">Copy to clipboard</string>
	<string name="address_book_context_default_title">Set as default address</string>
	<string name="address_book_context_determine_creation_time_title">Determine creation time</string>
	<string name="address_book_msg_clipboard_empty">Clipboard is empty</string>
	<string name="welcome_title">Welcome</string>
	<string name="welcome_text_no_account">If you already have a My wallet account press the
		pair device button to login. Otherwise please create a new account.
		It\'s Free!</string>
	<string name="welcome_text_has_account">You already have a My Wallet account paired with
		your device. If you would like to use a different account press the
		pair device button to login.</string>
	<string name="should_not_be_here">You should not be here. This is a bug</string>
	<string name="pair_wallet_title">Pair Wallet.</string>
	<string name="pair_wallet_button">Scan QR Code.</string>
	<string name="pair_wallet_step1">Step 1.</string>
	<string name="pair_wallet_step1_content">Login to your My Wallet account on your PC or Mac.
	</string>
	<string name="pair_wallet_step2">Step 2.</string>
	<string name="pair_wallet_step2_content">Click on the [Account Details] button then choose
		the [Devices] tab.</string>
	<string name="pair_wallet_step3">Step 3.</string>
	<string name="pair_wallet_step3_content">You will see a QR Code, click the button below to
		scan this QR Code with your camera.</string>
	<string name="welcome_pair_device_button">Pair Device</string>
	<string name="welcome_new_account_button">New Account</string>
	<string name="edit_address_book_entry_dialog_title_add">Add address</string>
	<string name="edit_address_book_entry_dialog_title_edit">Edit address</string>
	<string name="edit_address_book_entry_dialog_address_label">Address</string>
	<string name="edit_address_book_entry_dialog_label_label">Name</string>
	<string name="edit_address_book_entry_dialog_button_add">Add</string>
	<string name="edit_address_book_entry_dialog_button_edit">Save</string>
	<string name="edit_address_book_entry_dialog_button_delete">Delete</string>
	<string name="transaction_activity_title">Transaction</string>
	<string name="transaction_fragment_time_label">Date</string>
	<string name="transaction_fragment_time_today">today</string>
</resources>